--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
-    "expo-camera": "~16.0.18"
+    "expo-camera": "~16.0.18",
+    "react-native-maps": "1.18.0",
+    "react-native-webview": "13.12.5",
+    "expo-location": "~18.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
