--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "~52.0.47",
     "expo-av": "~15.0.2",
+    "expo-camera": "~16.0.18",
+    "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "4.9.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
-    "expo-camera": "~16.0.18",
-    "react-native-maps": "1.18.0",
-    "react-native-webview": "13.12.5",
-    "expo-location": "~18.0.10"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
