--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-network": "~7.0.5",
+    "expo-sms": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
