--- a/package.json
+++ b/package.json
@@ -19,21 +19,25 @@
     "expo-camera": "~16.0.18",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
+    "expo-localization": "^16.1.6",
     "expo-location": "~18.0.10",
+    "expo-network": "~7.0.5",
+    "expo-sms": "~13.0.1",
     "expo-status-bar": "~2.0.1",
+    "i18next": "^25.4.1",
     "react": "18.3.1",
+    "react-i18next": "^15.7.2",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-maps": "1.18.0",
     "react-native-paper": "4.9.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "13.12.5",
-    "expo-network": "~7.0.5",
-    "expo-sms": "~13.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
