--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-localization": "^16.1.6",
     "expo-location": "~18.0.10",
     "expo-network": "~7.0.5",
+    "expo-secure-store": "~14.0.1",
     "expo-sms": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "i18next": "^25.4.1",
@@ -37,7 +38,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
