--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "13.12.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-background-fetch": "~13.0.6",
+    "expo-task-manager": "~12.0.6",
+    "expo-notifications": "~0.29.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
