--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "~14.0.4",
@@ -16,15 +17,18 @@
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "~52.0.47",
     "expo-av": "~15.0.2",
+    "expo-background-fetch": "~13.0.6",
     "expo-camera": "~16.0.18",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-localization": "^16.1.6",
     "expo-location": "~18.0.10",
     "expo-network": "~7.0.5",
+    "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
     "expo-sms": "~13.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.6",
     "i18next": "^25.4.1",
     "react": "18.3.1",
     "react-i18next": "^15.7.2",
@@ -39,13 +43,15 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "13.12.5",
-    "uuid": "^11.1.0",
-    "expo-background-fetch": "~13.0.6",
-    "expo-task-manager": "~12.0.6",
-    "expo-notifications": "~0.29.14"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.1",
+    "jest": "^30.1.3",
+    "jest-expo": "^53.0.9",
+    "react-test-renderer": "^18.3.1"
   },
   "private": true
 }
