--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-navigation/native": "^7.1.16",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.5.1",
-    "jest": "^30.1.3",
+    "@testing-library/react-native": "^13.2.2",
+    "jest": "^30.0.5",
     "jest-expo": "^53.0.9",
     "react-test-renderer": "^18.3.1"
   },
